Add wait till half hour check in data capture

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,30 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  Daniel Hearn</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <title>Home Status</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-  
-<h1 id="temp"><span id="value--temp"> </span><span id="degree">c</span></h1>
-<h2 id="date"><span id="value--date"></span></h2>
-<h3 id="title">Home Status</h3>
-<button>Refresh</button>
-  
-  
-
+    <h1 id="temp"><span id="value--temp"> </span><span id="degree">c</span></h1>
+    <h1 id="humidity"><span id="value--humidity"> </span><span>%</span></h1>
+    <h2 id="date"><span id="value--date"></span></h2>
+    <h3 id="title">Home Status</h3>
     <script  src="js/index.js"></script>
-
-
-
-
 </body>
 
 </html>
