--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home Status</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,7 +23,7 @@
         <span id="value--date"></span>
     </h2>
     <h3 id="title">Home Status</h3>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <canvas id="statusChart" width="400" height="400"></canvas>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js">
     </script>
     <script src="js/index.js"></script>
