--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home Status</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-    <h1 id="temp">
-        <span>Temperature: </span>
-        <span id="value--temp"></span>
-        <span id="degree">c</span>
-    </h1>
-    <h1 id="humidity">
-        <span>Humidity: </span>
-        <span id="value--humidity"></span>
-        <span>%</span>
-    </h1>
-    <h2 id="date">
-        <span id="value--date"></span>
-    </h2>
-    <h3 id="title">Home Status</h3>
-    <canvas id="statusChart" width="400" height="400"></canvas>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js">
-    </script>
-    <script src="js/index.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Home Status</title><link rel="stylesheet" href="css/main.css"></head><body><div id="main"><div class="header"><h1>Home Status</h1></div><div class="grid-container"><section id="grid"><div class="grid-item"><div class="grid-content"><p class="content-title">Latest Status</p><p id="latest-temp"><span>Temperature: </span><span class="value"></span><span class="degree">c</span></p><p id="latest-humidity"><span>Humidity: </span><span class="value"></span><span>%</span></p><p id="latest-date"><span class="value"></span></p></div></div><div class="grid-item"><div class="grid-content"><p class="content-title">Home Status</p><div class="chart-container"><canvas id="statusChart" width="400" height="400"></canvas></div></div></div></section></div></div><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script><script src="js/moment.js"></script><script src="js/index.js"></script></body></html>
